--- a/wordpress.yaml
+++ b/wordpress.yaml
@@ -1,3 +1,78 @@
+apiVersion: v1                  
+kind: PersistentVolumeClaim     
+metadata:                       
+   name: pvc-mysql              
+spec:                           
+   accessModes:                  
+   - ReadWriteOnce              
+   resources:                   
+      requests:                 
+         storage: 1Gi          
+---
+apiVersion: v1                  
+kind: PersistentVolumeClaim     
+metadata:                       
+   name: pvc-wordpress              
+
+spec:                           
+   accessModes:                 
+   - ReadWriteOnce              
+   resources:                   
+      requests:                 
+         storage: 1Gi          
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: wordpress-mysql
+  labels:
+    app: wordpress
+spec:
+  clusterIP: None
+  ports:
+    - port: 3306
+  selector:
+    app: wordpress
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: wordpress-mysql
+  labels:
+    app: wordpress
+spec:
+
+  selector:
+    matchLabels:
+      app: wordpress
+  template:
+    metadata:
+      labels:
+        app: wordpress
+    spec:
+      containers:
+      - image: mysql:5.6
+        name: mysql
+        env:
+        - name: MYSQL_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mysql
+
+              key: password
+
+        ports:
+        - containerPort: 3306
+          name: mysql
+        volumeMounts:
+        - name: mysql-persistent-storage
+          mountPath: /var/lib/mysql
+      volumes:
+      - name: mysql-persistent-storage
+        persistentVolumeClaim:
+          claimName: pvc-mysql
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -5,27 +80,13 @@ metadata:
   labels:
     app: wordpress
 spec:
+  type: LoadBalancer
   ports:
     - port: 80
   selector:
     app: wordpress
-    tier: frontend
-  type: LoadBalancer
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: wp-pv-claim
-  labels:
-    app: wordpress
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 20Gi
----
-apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: wordpress
@@ -35,28 +96,27 @@ spec:
   selector:
     matchLabels:
       app: wordpress
-      tier: frontend
-  strategy:
-    type: Recreate
   template:
     metadata:
       labels:
         app: wordpress
-        tier: frontend
     spec:
       containers:
-      - image: aliomom/wordpress_wordpress
-        name: wordpress
+      - name: wordpresse
+        #command: ["/bin/sh", "-c"]
+        
+        image: aliomom/wpp     
+
         env:
         - name: WORDPRESS_DB_HOST
           value: wordpress-mysql
         - name: WORDPRESS_DB_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: mysql-pass
+              name: mysql
               key: password
         ports:
-        - containerPort: 80
+        - containerPort: 8000
           name: wordpress
         volumeMounts:
         - name: wordpress-persistent-storage
@@ -64,4 +124,4 @@ spec:
       volumes:
       - name: wordpress-persistent-storage
         persistentVolumeClaim:
-          claimName: wp-pv-claim
+          claimName: pvc-wordpress
